--- a/index_files/autoptimize_650efeacef646c97e8432d40eeda7285.css
+++ b/index_files/autoptimize_650efeacef646c97e8432d40eeda7285.css
@@ -29,3 +29,69 @@ ul.cnss-social-icon li.cn-fa-icon a{background-color:#51aee2!important}ul.cnss-s
 .is-menu-sidebar .header-menu-sidebar{visibility:visible}.is-menu-sidebar.menu_sidebar_slide_left .header-menu-sidebar{transform:translate3d(0,0,0);left:0}.is-menu-sidebar.menu_sidebar_slide_right .header-menu-sidebar{transform:translate3d(0,0,0);right:0}.is-menu-sidebar.menu_sidebar_pull_right .header-menu-sidebar,.is-menu-sidebar.menu_sidebar_pull_left .header-menu-sidebar{transform:translateX(0)}.is-menu-sidebar.menu_sidebar_dropdown .header-menu-sidebar{height:auto}.is-menu-sidebar.menu_sidebar_dropdown .header-menu-sidebar-inner{max-height:400px;padding:20px 0}.is-menu-sidebar.menu_sidebar_full_canvas .header-menu-sidebar{opacity:1}.header-menu-sidebar .menu-item-nav-search{pointer-events:none}.header-menu-sidebar .menu-item-nav-search .is-menu-sidebar &{pointer-events:unset}.nav-ul li:focus-within .wrap.active+.sub-menu{opacity:1;visibility:visible}.nav-ul li.neve-mega-menu:focus-within .wrap.active+.sub-menu{display:grid}.nav-ul li>.wrap{display:flex;align-items:center;position:relative;padding:0 4px}.nav-ul:not(.menu-mobile):not(.neve-mega-menu)>li>.wrap>a{padding-top:1px}
 #wp-block-themeisle-blocks-advanced-columns-b879b49c{padding-top:0;padding-bottom:0;padding-left:0;padding-right:0;margin-top:20px;margin-bottom:20px;min-height:auto;border-width:0;border-style:solid;border-color:#000;border-radius:0}#wp-block-themeisle-blocks-advanced-columns-b879b49c>.wp-block-themeisle-blocks-advanced-columns-overlay{opacity:.5;mix-blend-mode:normal;border-radius:0}#wp-block-themeisle-blocks-advanced-columns-b879b49c .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-b879b49c .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}@media (max-width:960px){#wp-block-themeisle-blocks-advanced-columns-b879b49c .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-b879b49c .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}}@media (max-width:600px){#wp-block-themeisle-blocks-advanced-columns-b879b49c .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-b879b49c .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}}#wp-block-themeisle-blocks-advanced-column-68892942{padding-top:20px;padding-bottom:20px;padding-left:20px;padding-right:20px;margin-top:20px;margin-bottom:20px;margin-left:0;margin-right:0;border-width:0;border-style:solid;border-color:#000;border-radius:0}#wp-block-themeisle-blocks-advanced-column-68892942>.wp-block-themeisle-blocks-advanced-column-overlay{opacity:.5;mix-blend-mode:normal;border-radius:0}@media (min-width:960px){#wp-block-themeisle-blocks-advanced-column-68892942{flex-basis:100%}}
 #wp-block-themeisle-blocks-advanced-columns-5b4d8a17{padding-top:30px;padding-bottom:20px;padding-left:20px;padding-right:20px;margin-top:20px;margin-bottom:20px;min-height:auto;--background:#ecf2ad;border-width:0;border-style:solid;border-color:#000;border-radius:8px}#wp-block-themeisle-blocks-advanced-columns-5b4d8a17>.wp-block-themeisle-blocks-advanced-columns-overlay{opacity:.5;mix-blend-mode:normal;border-radius:8px}#wp-block-themeisle-blocks-advanced-columns-5b4d8a17 .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-5b4d8a17 .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}@media (max-width:960px){#wp-block-themeisle-blocks-advanced-columns-5b4d8a17 .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-5b4d8a17 .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}}@media (max-width:600px){#wp-block-themeisle-blocks-advanced-columns-5b4d8a17 .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-5b4d8a17 .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}}#wp-block-themeisle-blocks-advanced-column-78e22ec1{padding-top:0;padding-bottom:0;padding-left:100px;padding-right:100px;margin-top:20px;margin-bottom:20px;margin-left:0;margin-right:0;border-width:0;border-style:solid;border-color:#000;border-radius:0}#wp-block-themeisle-blocks-advanced-column-78e22ec1>.wp-block-themeisle-blocks-advanced-column-overlay{opacity:.5;mix-blend-mode:normal;border-radius:0}@media (min-width:960px){#wp-block-themeisle-blocks-advanced-column-78e22ec1{flex-basis:100%}}@media (max-width:600px){#wp-block-themeisle-blocks-advanced-column-78e22ec1{padding-top:0;padding-bottom:0;padding-left:0;padding-right:0;margin-bottom:0}}@media (max-width:600px){.ticss-b7aad162 img{max-width:130px}}#wp-block-themeisle-blocks-advanced-heading-b3c1c1a7{line-height:40px;font-size:34px;--text-align:center;--text-align-mobile:center}@media (max-width:600px){#wp-block-themeisle-blocks-advanced-heading-b3c1c1a7{font-size:24px}}.ticss-97afc1ff{padding:1em}#wp-block-themeisle-blocks-advanced-columns-3e3b0751{padding-top:0;padding-bottom:0;padding-left:0;padding-right:0;margin-top:20px;margin-bottom:20px;min-height:auto;border-width:0;border-style:solid;border-color:#000;border-radius:0}#wp-block-themeisle-blocks-advanced-columns-3e3b0751>.wp-block-themeisle-blocks-advanced-columns-overlay{opacity:.5;mix-blend-mode:normal;border-radius:0}#wp-block-themeisle-blocks-advanced-columns-3e3b0751 .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-3e3b0751 .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}@media (max-width:960px){#wp-block-themeisle-blocks-advanced-columns-3e3b0751 .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-3e3b0751 .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}}@media (max-width:600px){#wp-block-themeisle-blocks-advanced-columns-3e3b0751 .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-3e3b0751 .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}}#wp-block-themeisle-blocks-advanced-column-88282183{padding-top:12px;padding-bottom:12px;padding-left:0;padding-right:20px;margin-top:0;margin-bottom:0;margin-left:0;margin-right:0;border-width:0;border-style:solid;border-color:#000;border-radius:0}#wp-block-themeisle-blocks-advanced-column-88282183>.wp-block-themeisle-blocks-advanced-column-overlay{opacity:.5;mix-blend-mode:normal;border-radius:0}@media (min-width:960px){#wp-block-themeisle-blocks-advanced-column-88282183{flex-basis:50%}}#wp-block-themeisle-blocks-advanced-column-d3f59dc7{padding-top:12px;padding-bottom:12px;padding-left:0;padding-right:20px;margin-top:0;margin-bottom:0;margin-left:0;margin-right:0;border-width:0;border-style:solid;border-color:#000;border-radius:0}#wp-block-themeisle-blocks-advanced-column-d3f59dc7>.wp-block-themeisle-blocks-advanced-column-overlay{opacity:.5;mix-blend-mode:normal;border-radius:0}@media (min-width:960px){#wp-block-themeisle-blocks-advanced-column-d3f59dc7{flex-basis:50%}}#wp-block-themeisle-blocks-advanced-columns-7424f2aa{padding-top:0;padding-bottom:0;padding-left:0;padding-right:0;margin-top:20px;margin-bottom:20px;min-height:auto;border-width:0;border-style:solid;border-color:#000;border-radius:0}#wp-block-themeisle-blocks-advanced-columns-7424f2aa>.wp-block-themeisle-blocks-advanced-columns-overlay{opacity:.5;mix-blend-mode:normal;border-radius:0}#wp-block-themeisle-blocks-advanced-columns-7424f2aa .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-7424f2aa .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}@media (max-width:960px){#wp-block-themeisle-blocks-advanced-columns-7424f2aa .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-7424f2aa .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}}@media (max-width:600px){#wp-block-themeisle-blocks-advanced-columns-7424f2aa .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-7424f2aa .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}}#wp-block-themeisle-blocks-advanced-column-25726110{padding-top:12px;padding-bottom:12px;padding-left:0;padding-right:20px;margin-top:0;margin-bottom:0;margin-left:0;margin-right:0;border-width:0;border-style:solid;border-color:#000;border-radius:0}#wp-block-themeisle-blocks-advanced-column-25726110>.wp-block-themeisle-blocks-advanced-column-overlay{opacity:.5;mix-blend-mode:normal;border-radius:0}@media (min-width:960px){#wp-block-themeisle-blocks-advanced-column-25726110{flex-basis:50%}}#wp-block-themeisle-blocks-advanced-column-6b55a8e7{padding-top:12px;padding-bottom:12px;padding-left:0;padding-right:20px;margin-top:0;margin-bottom:0;margin-left:0;margin-right:0;border-width:0;border-style:solid;border-color:#000;border-radius:0}#wp-block-themeisle-blocks-advanced-column-6b55a8e7>.wp-block-themeisle-blocks-advanced-column-overlay{opacity:.5;mix-blend-mode:normal;border-radius:0}@media (min-width:960px){#wp-block-themeisle-blocks-advanced-column-6b55a8e7{flex-basis:50%}}#wp-block-themeisle-blocks-advanced-columns-b879b49c{padding-top:0;padding-bottom:0;padding-left:0;padding-right:0;margin-top:20px;margin-bottom:20px;min-height:auto;border-width:0;border-style:solid;border-color:#000;border-radius:0}#wp-block-themeisle-blocks-advanced-columns-b879b49c>.wp-block-themeisle-blocks-advanced-columns-overlay{opacity:.5;mix-blend-mode:normal;border-radius:0}#wp-block-themeisle-blocks-advanced-columns-b879b49c .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-b879b49c .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}@media (max-width:960px){#wp-block-themeisle-blocks-advanced-columns-b879b49c .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-b879b49c .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}}@media (max-width:600px){#wp-block-themeisle-blocks-advanced-columns-b879b49c .wp-block-themeisle-blocks-advanced-columns-separators.top svg{height:100px;scale:1 1}#wp-block-themeisle-blocks-advanced-columns-b879b49c .wp-block-themeisle-blocks-advanced-columns-separators.bottom svg{height:100px;scale:1 1}}#wp-block-themeisle-blocks-advanced-column-68892942{padding-top:20px;padding-bottom:20px;padding-left:20px;padding-right:20px;margin-top:20px;margin-bottom:20px;margin-left:0;margin-right:0;border-width:0;border-style:solid;border-color:#000;border-radius:0}#wp-block-themeisle-blocks-advanced-column-68892942>.wp-block-themeisle-blocks-advanced-column-overlay{opacity:.5;mix-blend-mode:normal;border-radius:0}@media (min-width:960px){#wp-block-themeisle-blocks-advanced-column-68892942{flex-basis:100%}}
+#wp-block-themeisle-blocks-advanced-heading-56ed8174 {
+    color: #004880;
+    line-height: 60px;
+    font-size: 60px;
+    --text-align: center;
+    --text-align-mobile: center;
+}
+
+#wp-block-themeisle-blocks-advanced-columns-a5014ab4 {
+    padding-top: 0;
+    padding-bottom: 40px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    min-height: auto;
+    border-width: 0;
+    border-style: solid;
+    border-color: #000;
+    border-radius: 0;
+}
+
+#wp-block-themeisle-blocks-advanced-column-14d98951,
+#wp-block-themeisle-blocks-advanced-column-5853a49d,
+#wp-block-themeisle-blocks-advanced-column-2b320bfc,
+#wp-block-themeisle-blocks-advanced-column-6bb25b4a {
+    padding-top: 32px;
+    padding-bottom: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 16px;
+    margin-bottom: 0;
+    margin-left: 8px;
+    margin-right: 8px;
+    border-width: 0;
+    border-style: solid;
+    border-color: #000;
+    border-radius: 8px;
+    box-shadow: 0 0 16px 4px rgba(0,0,0,.16);
+}
+
+}
+
+
+#wp-block-themeisle-blocks-font-awesome-icons-4c13765f,
+#wp-block-themeisle-blocks-font-awesome-icons-68159d0f,
+#wp-block-themeisle-blocks-font-awesome-icons-690bece1,
+#wp-block-themeisle-blocks-font-awesome-icons-7f5f9fdc
+{
+    --margin: 0px;
+    --padding: 12px;
+}
+
+#wp-block-themeisle-blocks-font-awesome-icons-4c13765f span img,
+#wp-block-themeisle-blocks-font-awesome-icons-68159d0f span img,
+#wp-block-themeisle-blocks-font-awesome-icons-690bece1 span img,
+#wp-block-themeisle-blocks-font-awesome-icons-7f5f9fdc span img
+{
+    height: 70px;
+}
+
+
+.ticss-challenges {
+    margin-bottom: 0.25em;
+    text-align: center;
+}
