--- a/index_files/autoptimize_650efeacef646c97e8432d40eeda7285.css
+++ b/index_files/autoptimize_650efeacef646c97e8432d40eeda7285.css
@@ -37,7 +37,8 @@ ul.cnss-social-icon li.cn-fa-icon a{background-color:#51aee2!important}ul.cnss-s
     --text-align-mobile: center;
 }
 
-#wp-block-themeisle-blocks-advanced-columns-a5014ab4 {
+#wp-block-themeisle-blocks-advanced-columns-a5014ab4,
+#wp-block-themeisle-blocks-advanced-columns-a5014ab42 {
     padding-top: 0;
     padding-bottom: 40px;
     padding-left: 0;
@@ -54,7 +55,11 @@ ul.cnss-social-icon li.cn-fa-icon a{background-color:#51aee2!important}ul.cnss-s
 #wp-block-themeisle-blocks-advanced-column-14d98951,
 #wp-block-themeisle-blocks-advanced-column-5853a49d,
 #wp-block-themeisle-blocks-advanced-column-2b320bfc,
-#wp-block-themeisle-blocks-advanced-column-6bb25b4a {
+#wp-block-themeisle-blocks-advanced-column-6bb25b4a,
+#wp-block-themeisle-blocks-advanced-column-14d989512,
+#wp-block-themeisle-blocks-advanced-column-5853a49d2,
+#wp-block-themeisle-blocks-advanced-column-2b320bfc2,
+#wp-block-themeisle-blocks-advanced-column-6bb25b4a2 {
     padding-top: 32px;
     padding-bottom: 0;
     padding-left: 20px;
@@ -68,8 +73,6 @@ ul.cnss-social-icon li.cn-fa-icon a{background-color:#51aee2!important}ul.cnss-s
     border-color: #000;
     border-radius: 8px;
     box-shadow: 0 0 16px 4px rgba(0,0,0,.16);
-}
-
 }
 
 
